--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -22,7 +23,11 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.9"
   }
 }
