--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.2",
-    "next": "^13.4.4",
+    "next": "^13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
